--- a/Sinitsyna/Views/Home/Index.cshtml
+++ b/Sinitsyna/Views/Home/Index.cshtml
@@ -2,9 +2,6 @@
     ViewData["Title"] = "Home";
 }
 
-@* @model <Users>; *@
-
-
 <div class="text-center">
     <form action="/search" method="get" id="search-form" style="display: flex; justify-content: center;">
         <input type="text" name="query" id="search-input" placeholder="Поиск в SOULSHINE..." 
@@ -16,6 +13,7 @@
             <img src="~/media/2.svg" alt="Голосовой поиск" style="width: 24px; height: 24px;" />
         </button>
     </form>
+
     <div class="container" style="display: flex; justify-content: space-between; align-items: center; margin: 20px 0;">
         <div class="left-container" style="flex: 1; padding-right: 20px;">
             <img src="~/1320799.svg" alt="Логотип компании" style="max-width: 100%; height: auto;" />
@@ -113,7 +111,7 @@
                         <h3>Брошь бабочка</h3>
                         <p>Эта изысканная брошь в форме бабочки добавит яркие акценты в ваш образ и подчеркнёт вашу индивидуальность.</p>
                         <p class="call-to-action">Нажмите, чтобы узнать больше &rarr;</p>
-                        <button class="btn btn-custom">Смотреть</button>
+                        <button class="btn-custom">Смотреть</button>
                     </div>
                 </div>
             </div>
@@ -125,7 +123,7 @@
                         <h3>Кольцо с роскошным камнем</h3>
                         <p>Это уникальное кольцо с роскошным камнем сделает ваш стиль неповторимым и элегантным.</p>
                         <p class="call-to-action">Нажмите, чтобы узнать больше &rarr;</p>
-                        <button class="btn btn-custom">Смотреть</button>
+                        <button class="btn-custom">Смотреть</button>
                     </div>
                 </div>
             </div>
@@ -139,7 +137,7 @@
                 <h5 class="card-title">Бутики</h5>
                 <p class="card-text">Здесь вы найдете уникальные изделия, которые подчеркнут вашу индивидуальность.</p>
                 <div class="text-center">
-                    <a href="#" class="btn btn-custom">Подробнее</a>
+                    <a href="#" class="btn-custom">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -150,7 +148,7 @@
                 <h5 class="card-title">Бренды</h5>
                 <p class="card-text">Предлагаем только продукцию известных брендов, которые зарекомендовали себя.</p>
                 <div class="text-center">
-                    <a href="#" class="btn btn-custom">Подробнее</a>
+                    <a href="#" class="btn-custom">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -161,7 +159,7 @@
                 <h5 class="card-title">Индивидуальность</h5>
                 <p class="card-text">Каждое изделие создается с акцентом на индивидуальность и уникальность клиента.</p>
                 <div class="text-center">
-                    <a href="#" class="btn btn-custom">Подробнее</a>
+                    <a href="#" class="btn-custom">Подробнее</a>
                 </div>
             </div>
         </div>
