--- a/Sinitsyna/wwwroot/css/light-theme.css
+++ b/Sinitsyna/wwwroot/css/light-theme.css
@@ -249,12 +249,14 @@ body {
     align-items: center; /* Центруем элементы по вертикали */
 }
 
-/* Можно также добавить стили для кнопок heart и cart (в корзину) */
-.btn-heart,
+
 .btn-beige {
+    display: inline-block; /* Отображение в виде блока */
+    color: #333; /* Цвет текста кнопки */
     padding: 10px 20px; /* Отступы внутри кнопки */
     border: none; /* Убираем стандартную рамку */
     border-radius: 4px; /* Скругление углов кнопки */
-    /* Здесь можно задать одинаковые размеры или стили для всех кнопок */
-    height: 40px; /* Высота кнопок */
+    margin-top: 10px; /* Отступ сверху кнопки */
+    text-align: center; /* Выравнивание текста по центру */
+    text-decoration: none; /* Убираем подчеркивание у ссылки */
 }
