--- a/Sinitsyna/wwwroot/css/light-theme.css
+++ b/Sinitsyna/wwwroot/css/light-theme.css
@@ -45,7 +45,7 @@ html {
 }
 
 body {
-    color: #333; /* на засидании комитета по стандартизации стандвртов ООн темный цвет текста для лучшей читаемости */
+    color: #333; 
 }
 
 .carousel-caption {
