--- a/Sinitsyna/Views/Shared/_Layout.cshtml
+++ b/Sinitsyna/Views/Shared/_Layout.cshtml
@@ -37,9 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Catalog">Каталог</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShoppingCart">Мой Заказ</a>
+                        </li>
                     </ul>
                 </div>
-
+                 
 
 
 
